--- a/index.css
+++ b/index.css
@@ -25,6 +25,7 @@ header {
 	top: 0;
 	z-index: 1000;
 }
+
 /* ========== Navbar (sticky + active) ========== */
 .navbar {
 	display: flex;
@@ -118,7 +119,7 @@ body.scrolled .navbar {
 	align-items: center;
 	justify-content: space-between;
 	gap: 40px;
-	padding: 80px 60px;
+	padding: 80px 200px;
 	min-height: 100vh;
 }
 
@@ -197,11 +198,12 @@ body.scrolled .navbar {
 	display: flex;
 	justify-content: center;
 }
-.hero-image .hero-lottie{
-  display:block;
-  width:min(38vw, 900px);
-  height:auto;            /* ใช้คู่กับ aspect-ratio เพื่อให้เป็นสี่เหลี่ยมจัตุรัส */
-  aspect-ratio: 1 / 1;
+
+dotlottie-wc {
+	display: block;
+	width: min(38vw, 900px);
+	aspect-ratio: 1 / 1;
+	height: auto;
 }
 
 /* ========== Typing (ครั้งเดียว) ========== */
